An actual substantive update for reasons I guess

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<title>"where dufduf lives"</title>
+	<link rel="stylesheet" href="homestyle.css">
+	<title>Where dufduf lives</title>
 
 	<body>
-		<p>There's gonna end up being more here I promise</p>
+		<h1>hi im dufdufduf123</h1>
+
+		<p>Hi, I'm a freshman at the University of Washington at Seattle. I really like math and music and have a vague disinterest in everything that I can't somehow tie into either one. </p>
 
 	</body>
 </html>
