--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>hi im dufdufduf123</h1>
 
-		<p>Hi, I'm a freshman at the University of Washington at Seattle. I really like math and music and have a vague disinterest in everything that I can't somehow tie into either one. </p>
+		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="Collatz/collatz.html">Collatz Conjecture</a>.</p>
 
 	</body>
 </html>
