adds a new collatz page, plus smaller updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Where dufduf lives</title>
 
 	<body>
-		<h1>hi im dufdufduf123</h1>
+		<h1>Hi, im dufdufduf123</h1>
 
 		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="Collatz/collatz.html">Collatz Conjecture</a>.</p>
 
