--- a/Collatz/collatz.html
+++ b/Collatz/collatz.html
@@ -2,14 +2,28 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../homestyle.css">
+
+		<script type="text/x-mathjax-config">
+			MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+		</script>
+		<script type="text/javascript" async
+				src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
+		</script>
+
 		<title>The Collatz Conjecture</title>
 	</head>
 
 	<body>
 		<h1>Adventures with the Collatz Conjecture</h1>
-		<p>Yeah there's gonna be more stuff here eventually but for now heres a sneak peek</p>
-		<img src="differentLandscape.png" alt="wack stuff">
-		<img src="first10000.png" alt="really wack">
-		<img src="holdup.png" alt="honestly barely understand this stuff">
+	
+		<p>I don't remember the first time I heard about the Collatz conjecture, but I remember that I was messing around with it during high school calc when I should've probably be paying attention. For those unfamiliar with the premise of the Collatz conjecture, it basically means that no matter what number $n$ you start at, you will eventually reach 1 if you repeatedly half it for any even $n$, and multiply it by 3 and add 1 for any odd $n$. As a function, this could be written out as:</p>
+		<div class="math">$f(x) = \begin{cases}\frac{n}{2} & \text{if n is even} \\
+			3n + 1 & \text{if n is odd} \\
+			\end{cases}$
+		</div>
+
+		<img src="img/second200.png" alt="wack stuff">
+		<img src="img/first10000.png" alt="really wack">
+		<img src="img/holdup.png" alt="honestly barely understand this stuff">
 	</body>
 </html>
