--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
+	<head>
 	<link rel="stylesheet" href="homestyle.css">
 	<title>Where dufduf lives</title>
-
+	<ul>
+		<li></br></li>
+		<li><a class="active" href=".">Home</a></li>
+		<li><a href="math.html">Math</a></li>
+	</ul>
+	<style>
+		.headImage{
+			padding-top: 5%;
+			margin-left: 25%;
+			padding-bottom: 5%;
+			background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.5)), url("img/uwcherry.jpg");
+			height: 50%;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			position: relative;
+		}
+	</style>
+	</head>
 	<body>
-		<h1>Hi, im dufdufduf123</h1>
-
+		<div class="headImage">
+			<h1>Hi, im Vidhaat</h1>
+		</div>
 		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="Collatz/collatz.html">Collatz Conjecture</a>.</p>
 
 	</body>
