Adds more stuff to the collatz page

--- a/Collatz/collatz.html
+++ b/Collatz/collatz.html
@@ -3,29 +3,29 @@
 	<head>
 		<link rel="stylesheet" href="../homestyle.css">
 
-		<script type="text/x-mathjax-config">
-			MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-		</script>
-		<script type="text/javascript" async
-				src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
-		</script>
-		<style>
-			.headImage{
-				padding-top: 5%;
-				padding-bottom: 5%;
-				margin-left: 25%;
-				background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.5)), url("img/allofem.png");
-				background-position: center;  
-				background-repeat: no-repeat;
-				background-size: 135%;
-				position: relative;
-			}
-		</style>
+			<script type="text/x-mathjax-config">
+				MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+			</script>
+			<script type="text/javascript" async
+					src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
+			</script>
+			<style>
+				.headImage{
+					padding-top: 5%;
+					padding-bottom: 5%;
+					margin-left: 25%;
+					background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.5)), url("img/allofem.png");
+					background-position: center;  
+					background-repeat: no-repeat;
+					background-size: 135%;
+					position: relative;
+				}
+			</style>
 
-		<title>The Collatz Conjecture</title>
+			<title>The Collatz Conjecture</title>
 
-		<ul>
-			<li></br></li>
+			<ul>
+				<li></br></li>
 			<li><a href="../index.html">Home</a></li>
 			<li><a href="../math.html">Math</a></li>
 		</ul>
@@ -35,35 +35,35 @@
 		<div class="headImage">
 			<h1>Adventures with the Collatz Conjecture</h1>
 		</div>
-	
+
 		<p>I don't remember the first time I heard about the Collatz conjecture, but I remember that I was messing around with it during high school calc when I should've probably be paying attention. For those unfamiliar with the premise of the Collatz conjecture, it basically means that no matter what number $n$ you start at, you will eventually reach 1 if you repeatedly half it for any even $n$, and multiply it by 3 and add 1 for any odd $n$. As a function, this could be written out as:</p>
 		<div class="math">$f(x) = \begin{cases}\frac{n}{2} & \text{if n is even} \\
 			3n + 1 & \text{if n is odd} \\
 			\end{cases}$
 		</div>
-		<p>So here I was, sitting in calc class, putting one number in each square in my graph paper, using my calculator to help me out as I went. I ended up reaching around 40 before getting too bored with it, but I found a pattern in the sequence before then. 
-
-			Let's look at the Collatz trajectories for the initial values $n=\{28,29,30\}$. 
+		<p>So here I was, sitting in calc class, putting one number in each square in my graph paper, using my calculator to help me out as I went. I ended up reaching around 40 before getting too bored with it, but I found a pattern in the sequence before then. I saw that some consecutive initial values would converge to 1 at the same time.
 		</p>
 		<div class="math">
 			$\begin{align}
-	28\rightarrow 14 \rightarrow 7 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 17 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
+			28\rightarrow 14 \rightarrow 7 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 17 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
 
-	29 \rightarrow 88 \rightarrow 44 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
+			29 \rightarrow 88 \rightarrow 44 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
 
-	30 \rightarrow 15 \rightarrow 46 \rightarrow 23 \rightarrow 70 \rightarrow 35 \rightarrow 106 \rightarrow 53 \rightarrow 160 \rightarrow 80 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
+			30 \rightarrow 15 \rightarrow 46 \rightarrow 23 \rightarrow 70 \rightarrow 35 \rightarrow 106 \rightarrow 53 \rightarrow 160 \rightarrow 80 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
 			\end{align}$
 		</div>
 		<p>I remember this popping out to me at the time. It made sense that if multiple trajectories reached the same value they would continue to be the same, but reaching the same value at the same time? At the time, however, I just assumed it was a coincidence and I went back to being a good student and paying attention.
-		<p>The following summer, I ended up being bored enough that I decided to revisit this. I had assumed that the pattern in the sequence was just a coincidence but was not fully convinced, so I ended up revisiting it using a spreadsheet. I found out that similar patterns where multiple consecutive initial values went to 1 in the same number of iterations existed with surprising frequency. I couldn't really think of a way to visualize these, and I didn't feel like crunching the numbers to get a better feel for them, so I just messed around with larger numbers until I got bored with the entire buisiness and did something else.
-		</p>
-		<p> Fast-forward to about half a year later, and I was taking a numerical methods class using MATLAB. As soon as I used MATLAB's <tt>plot()</tt> for the first time, I was reminded of the Collatz stuff I had done earlier and decided to try messing around with it again.
+		</br></br>The following summer, I ended up being bored enough that I decided to revisit this. I had assumed that the pattern in the sequence was just a coincidence but was not fully convinced, so I ended up revisiting it using a spreadsheet. I found out that similar patterns where multiple consecutive initial values went to 1 in the same number of iterations existed with surprising frequency. I couldn't really think of a way to visualize these, and I didn't feel like crunching the numbers to get a better feel for them, so I just messed around with larger numbers until I got bored with the entire buisiness and did something else.
+</br></br>
+		Fast-forward to about half a year later, and I was taking a numerical methods class using MATLAB. As soon as I used MATLAB's <tt>plot()</tt> for the first time, I knew I had to revisit this to get a better look at it.
+	</br></br> 
+I didn't know how many initial values I wanted to look at, so I wrote a MATLAB script that would give me the trajectories for an arbitrary number of initial values, depending on how many I asked it for. This script would then export the array as a <tt>.mat</tt> file, and I could use other scripts to visualize the data however I wanted without having to regenerate the array each time.
+
 		</p> 
+		<h2>Visual thing</h2>
 
-
-
-		<img src="img/second200.png" alt="wack stuff">
-		<img src="img/first10000.png" alt="really wack">
-		<img src="img/holdup.png" alt="honestly barely understand this stuff">
+		<img src="img/second200.png" alt="wack stuff"></img>
+		<img src="img/first10000.png" alt="really wack"></img>
+		<img src="img/holdup.png" alt="honestly barely understand this stuff"></img>
 	</body>
 </html>
