--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<div class="headImage">
 			<h1>Hi, im Vidhaat</h1>
 		</div>
+		<div class="text">
 		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="Collatz/collatz.html">Collatz Conjecture</a>.</p>
-
+		</div>
 	</body>
 </html>
