--- a/math.html
+++ b/math.html
@@ -11,6 +11,8 @@
 
 	<body>
 		<h1>The math stuff I've done</h1>
-		<p>So, uh, yeah I've only ever done this one thing about the <a href="Collatz/collatz.html">Collatz Conjecture</a> so if you're looking for anything else you're probably not gonna find it :(</p>
+		<div class="text">
+			<p>So, uh, yeah I've only ever done this one thing about the <a href="Collatz/collatz.html">Collatz Conjecture</a> so if you're looking for anything else you're probably not gonna find it :(</p>
+		</div>
 	</body>
 </html>
