--- a/Collatz/collatz.html
+++ b/Collatz/collatz.html
@@ -37,33 +37,88 @@
 		</div>
 
 		<p>I don't remember the first time I heard about the Collatz conjecture, but I remember that I was messing around with it during high school calc when I should've probably be paying attention. For those unfamiliar with the premise of the Collatz conjecture, it basically means that no matter what number $n$ you start at, you will eventually reach 1 if you repeatedly half it for any even $n$, and multiply it by 3 and add 1 for any odd $n$. As a function, this could be written out as:</p>
-		<div class="math">$f(x) = \begin{cases}\frac{n}{2} & \text{if n is even} \\
+		<div class="math">
+			$
+			f(x) = \begin{cases}\frac{n}{2} & \text{if n is even} \\
 			3n + 1 & \text{if n is odd} \\
-			\end{cases}$
+			\end{cases}
+			$
 		</div>
-		<p>So here I was, sitting in calc class, putting one number in each square in my graph paper, using my calculator to help me out as I went. I ended up reaching around 40 before getting too bored with it, but I found a pattern in the sequence before then. I saw that some consecutive initial values would converge to 1 at the same time.
+		<p>So here I was, sitting in calc class, putting one number in each square in my graph paper, using my calculator to help me out as I went. I ended up reaching around 40 before getting too bored with it, but I found a pattern in the sequence before then. I noticed that some consecutive initial values would converge to 1 at the same time.
 		</p>
 		<div class="math">
-			$\begin{align}
-			28\rightarrow 14 \rightarrow 7 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 17 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
+			$
+			\begin{align}
+			28\rightarrow 14 \rightarrow \phantom{0} 7 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow \phantom{0} 17 \rightarrow 52 \rightarrow \phantom{0} 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
 
-			29 \rightarrow 88 \rightarrow 44 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow 52 \rightarrow 26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
+			29 \rightarrow 88 \rightarrow 44 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow \phantom{0}17 \rightarrow 52 \rightarrow \phantom{0}26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
 
 			30 \rightarrow 15 \rightarrow 46 \rightarrow 23 \rightarrow 70 \rightarrow 35 \rightarrow 106 \rightarrow 53 \rightarrow 160 \rightarrow 80 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 &\rightarrow 1\\
-			\end{align}$
+			\end{align}
+			$
 		</div>
 		<p>I remember this popping out to me at the time. It made sense that if multiple trajectories reached the same value they would continue to be the same, but reaching the same value at the same time? At the time, however, I just assumed it was a coincidence and I went back to being a good student and paying attention.
 		</br></br>The following summer, I ended up being bored enough that I decided to revisit this. I had assumed that the pattern in the sequence was just a coincidence but was not fully convinced, so I ended up revisiting it using a spreadsheet. I found out that similar patterns where multiple consecutive initial values went to 1 in the same number of iterations existed with surprising frequency. I couldn't really think of a way to visualize these, and I didn't feel like crunching the numbers to get a better feel for them, so I just messed around with larger numbers until I got bored with the entire buisiness and did something else.
 </br></br>
 		Fast-forward to about half a year later, and I was taking a numerical methods class using MATLAB. As soon as I used MATLAB's <tt>plot()</tt> for the first time, I knew I had to revisit this to get a better look at it.
 	</br></br> 
-I didn't know how many initial values I wanted to look at, so I wrote a MATLAB script that would give me the trajectories for an arbitrary number of initial values, depending on how many I asked it for. This script would then export the array as a <tt>.mat</tt> file, and I could use other scripts to visualize the data however I wanted without having to regenerate the array each time.
+I didn't know how many initial values I wanted to look at, so I wrote a MATLAB script that would give me the trajectories for an arbitrary number of initial values, depending on how many I asked it for. This script would then export the array as a <tt>.mat</tt> file, and I could use other scripts to visualize the data however I wanted without having to generate the array each time.
 
 		</p> 
-		<h2>Visual thing</h2>
+		<h2>Consecutive Initial Values</h2>
 
-		<img src="img/second200.png" alt="wack stuff"></img>
-		<img src="img/first10000.png" alt="really wack"></img>
-		<img src="img/holdup.png" alt="honestly barely understand this stuff"></img>
+		<p>So the first thing I was interested in seeing was those weird patterns with consecutive initial values. Here's the graph of the number of iterations of the first 50 values.
+		</p>
+		<img src="img/first50.png" alt="the first 50 times"></img>	
+		<p>As we can see, there are already multiple occurances of this happening, sometimes with two consecutive values having the same ceonvergence time, and sometimes with three. Since these are still small numbers and we can work on them without needing to use a calculator every three seconds, let's look at their trajectories to see why they converge how they do, starting with the groups of two.
+		</p> 
+		<div class="math">
+			$
+			\begin{align}
+			12 \rightarrow \phantom{0}6 \rightarrow \phantom{0} 3 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+
+			13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+			\end{align}
+			$
+		</div>
+		<p>My intuition for this is that both of these sequences "approach" 10 from different directions. The trajectory with initial value 12 approaches 10 from the bottom, and the trajectory with initial value 13 approaches from above. </p>
+		<div class="math">
+			$
+			\begin{align}
+			14 \rightarrow \phantom{0}7 \rightarrow 22 \rightarrow 11 \rightarrow 34 \rightarrow \phantom{0}17 \rightarrow 52 \rightarrow \phantom{0}26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+
+			15 \rightarrow 46 \rightarrow 23 \rightarrow 70 \rightarrow 35 \rightarrow 106 \rightarrow 53 \rightarrow 160 \rightarrow 80 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+			\end{align}
+			$
+		</div>
+		<p>
+			This is a more interesting example of two values approaching 1 at the same time. These trajectories are 1 apart from each other multiple times, at the 0th, 2nd, 4th, and 6th iteration. Note that this also means that those values will also converge at the same time. For example, the sequence for 52 is <i>included</i> in the sequence for 14, and the same goes for 53 and 15. </br></br>
+			Another thing to notice is that this means that 22 and 23 will be one off from one another at the 0th, 2nd, and 4th iterations:
+		</p>
+		<div class="math">
+			$
+			\begin{align}
+			22 \rightarrow 11 \rightarrow 34 \rightarrow \phantom{0}17 \rightarrow 52 \rightarrow \phantom{0}26 \rightarrow 13 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+
+			23 \rightarrow 70 \rightarrow 35 \rightarrow 106 \rightarrow 53 \rightarrow 160 \rightarrow 80 \rightarrow 40 \rightarrow 20 \rightarrow 10 \rightarrow 5 \rightarrow 16 \rightarrow 8 \rightarrow 4 \rightarrow 2 \rightarrow 1\\
+			\end{align}
+			$
+		</div>
+		<p> 
+			I found a particularly dramatic example of this happening with initial values 62 and 63. These trajectories become the same after the 13th iteration, but then take 91 more iterations to reach zero, so I'll just show you the trajectories until they reach one another:
+		</p>
+		<div class="math">
+			$
+			\begin{align}
+			62 \rightarrow \phantom{0}31 \rightarrow 94 \rightarrow \phantom{0}47 \rightarrow 142 \rightarrow \phantom{0}71 \rightarrow 214 \rightarrow 107 \rightarrow 322 \rightarrow 161 \rightarrow 484 \rightarrow \phantom{0}242 \rightarrow 121 \rightarrow 364 \phantom{0}...\\
+
+			63 \rightarrow 190 \rightarrow 95 \rightarrow 286 \rightarrow 143 \rightarrow 430 \rightarrow 215 \rightarrow 646 \rightarrow 323 \rightarrow 970 \rightarrow 485 \rightarrow 1456 \rightarrow 728 \rightarrow 364 \phantom{0}...\\
+			\end{align}
+			$
+		</div>
+		<p>
+			And just to make sure that these go to 1, here's the graphs of both of them: 
+		</p>
+
 	</body>
 </html>
