--- a/Home/homepage.html
+++ b/Home/homepage.html
@@ -6,7 +6,7 @@
 	<ul>
 		<li></br></li>
 		<li><a class="active" href=".">Home</a></li>
-		<li><a href="math.html">Math</a></li>
+		<li><a href="../Math/math.html">Math</a></li>
 	</ul>
 	<style>
 		.headImage{
@@ -27,7 +27,7 @@
 			<h1>Hi, im Vidhaat</h1>
 		</div>
 		<div class="text">
-		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="Collatz/collatz.html">Collatz Conjecture</a>.</p>
+		<p>I'm a freshman studying math at the University of Washington at Seattle. I really like math and music and have a vague disinterest in anything I can't somehow tie into either one. Now that you're here, you might want to look at the one thing I have up right now, which is about me messing around with the <a href="../Math/Collatz/collatz.html">Collatz Conjecture</a>.</p>
 		</div>
 	</body>
 </html>
