--- a/Math/math.html
+++ b/Math/math.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<title>Math</title>
-		<link rel="stylesheet" href="homestyle.css">
+		<link rel="stylesheet" href="../Home/homestyle.css">
 		<ul>
 			<li></br></li>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="../Home/homepage.html">Home</a></li>
 			<li><a class="active"  href=".">Math</a></li>
 		</ul>
 	</head>
