--- a/Math/Collatz/collatz.html
+++ b/Math/Collatz/collatz.html
@@ -26,7 +26,7 @@
 
 			<ul>
 				<li></br></li>
-			<li><a href="../../Home/homepage.html">Home</a></li>
+			<li><a href="../../index.html">Home</a></li>
 			<li><a href="../math.html">Math</a></li>
 		</ul>
 	</head>
