--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<link rel="stylesheet" href="homestyle.css">
+	<link rel="stylesheet" href="Home/homestyle.css">
 	<title>Where dufduf lives</title>
 	<ul>
 		<li></br></li>
